--- a/gcore/webapp/template/signUp.html
+++ b/gcore/webapp/template/signUp.html
@@ -39,9 +39,9 @@ window.addEventListener("load", async () => {
 </script>
 
 <div class="card accountInfoArea">
-    <input class="textInput" type="text" id="signUpUsername" placeholder="Username"></input>
+    <input class="textInput" type="text" id="signUpUsername" placeholder="Username" maxlength="16"></input>
     <br/>
-    <input class="textInput" type="password" id="signUpPassword" placeholder="Password"></input>
+    <input class="textInput" type="password" id="signUpPassword" placeholder="Password" maxlength="16"></input>
     <br/>
     <img id="signUpCaptcha" src="#"/>
     <br/>
